# MidiPlayer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  COMPILING.md  INIReader.cpp  INIReader.hpp  Makefile  MidiBankScan.cpp  MidiBankScan.hpp  MidiBankScanTool.cpp  MidiInsReader.c  MidiInsReader.h  MidiLib.cpp  MidiLib.hpp  MidiModules.cpp  MidiModules.hpp  MidiOut.h  MidiOut_ALSA.c  MidiOut_WinMM.c  MidiPlay.cpp  MidiPlay.hpp  MidiPlayer.sln  MidiPlayer.vcxproj  MidiPlayer.vcxproj.filters  MidiPortAliases.cpp  MidiPortAliases.hpp  NoteVis.cpp  NoteVis.hpp  OSThread.h  OSThread_POSIX.c  OSThread_Win.c  OSTimer.h  OSTimer_OSX.c  OSTimer_POSIX.c  OSTimer_Win.c  RCPLoader.cpp  RCPLoader.hpp  README.md  config-example.ini  (+17 more)
_MidiInsSets/: _info.txt  general.ins  gml2.ins  gs.ins  mt32.ins  ns5r.ins  xg.ins  y-plg.ins  ygs.ins
libs/pdcurses/: Info.txt
libs/uchardet/: Info.txt
